--- a/package.json
+++ b/package.json
@@ -12,17 +12,20 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@aws-amplify/backend": "^1.0.4",
-    "@aws-amplify/backend-cli": "^0.11.1",
     "aws-cdk": "^2.151.0",
     "aws-cdk-lib": "^2.151.0",
     "constructs": "^10.3.0",
     "esbuild": "^0.23.0",
-    "tsx": "^4.16.5"
+    "tsx": "^4.16.5",
+    "typescript": "^3.2.1"
   },
   "dependencies": {
+    "@aws-amplify/api": "^6.0.43",
+    "@aws-amplify/auth": "^3.4.27",
+    "@aws-amplify/ui-react": "^1.0.5",
     "aws-amplify": "^6.4.4",
-    "react": "^18.3.1",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "react-scripts": "^5.0.1",
     "scripts": "^0.1.0"
   },
