--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
+  "private": true,
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -22,12 +23,13 @@
     "esbuild": "^0.23.0"
   },
   "dependencies": {
-    "@aws-amplify/api": "^6.0.43",
+    "@aws-amplify/api": "^6.0.48",
     "@aws-amplify/auth": "^3.4.27",
     "@aws-amplify/ui-react": "^1.0.5",
-    "aws-amplify": "^6.4.4",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
+    "aws-amplify": "^5.0.0",
+    "aws-amplify-react": "^4.2.10",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-scripts": "^5.0.1",
     "scripts": "^0.1.0"
   },
